Bug 171317 Show Dialog=FALSE doesn't work patch by ajschult@verizon.net r=dveditz sr=bryner