xpinstall/wizard/unix/src2/nsComponentsDlg.cpp
@@ -135,17 +135,6 @@ nsComponentsDlg::Parse(nsINIParser *aParser)
     err = aParser->GetStringAlloc(DLG_COMPONENTS, MSG0, &mMsg0, &bufsize);
     if (err != OK && err != nsINIParser::E_NO_KEY) goto BAIL; else err = OK;
 
-    bufsize = 5;
-    err = aParser->GetStringAlloc(DLG_COMPONENTS, SHOW_DLG, &showDlg, &bufsize);
-    if (err != OK && err != nsINIParser::E_NO_KEY) goto BAIL; else err = OK;
-    if (bufsize != 0 && showDlg)
-    {
-        if (0 == strncmp(showDlg, "TRUE", 4))
-            mShowDlg = nsXInstallerDlg::SHOW_DIALOG;
-        else if (0 == strncmp(showDlg, "FALSE", 5))
-            mShowDlg = nsXInstallerDlg::SKIP_DIALOG;
-    }
-
     bufsize = 0;
     err = aParser->GetStringAlloc(DLG_COMPONENTS, TITLE, &mTitle, &bufsize);
     if (err != OK  && err != nsINIParser::E_NO_KEY) goto BAIL; else err = OK;
