xpinstall/wizard/unix/src2/nsWelcomeDlg.cpp
@@ -116,7 +116,13 @@ BAIL:
 int
 nsWelcomeDlg::Show()
 {
-    int err = 0;
+    int err = OK;
+    if (!mShowDlg)
+    {
+       gCtx->ldlg->Show();
+       return err;
+    }
+   
     char *readmeContents = NULL;
 
     XI_VERIFY(gCtx);
